adjusts clean and clean.core requirements, installs usync

--- a/UmbracoDockerProject/appsettings.json
+++ b/UmbracoDockerProject/appsettings.json
@@ -25,6 +25,11 @@
       "Unattended": {
         "UpgradeUnattended": true
       },
+      "uSync": {
+        "Settings": {
+          "ImportAtStartup": "false"
+        }
+      },
       "Security": {
         "AllowConcurrentLogins": false
       }
