--- a/UmbracoDockerProject/UmbracoDockerProject.csproj
+++ b/UmbracoDockerProject/UmbracoDockerProject.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="clean" Version="3.1.4" />
+    <PackageReference Include="Clean.Core" Version="3.1.4" />
     <PackageReference Include="Umbraco.Cms" Version="12.3.3" />
   </ItemGroup>
 
