reconfigures `msql_data` to `external`
corrects a docker compose issue, where the mssql server sometimes couldn't start

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,7 +116,7 @@ volumes:
   umbraco_media: 
     external: false
   umbraco_mssql_data:
-    external: false
+    external: true
   umbraco_logs: 
     external: false
 networks:
